# NexDyn-Diff

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindOrFetch.cmake  ShellTests.cmake  SimcoreDependencies.cmake  SimcoreHarden.cmake  SimcoreLinkOptions.cmake  SimcoreMacOS.cmake  SimcoreOptions.cmake  simcoreConfig.cmake.in
cmake/third_party_deps/: dear_imgui.cmake  filament.cmake  font_awesome.cmake  implot.cmake  libwebp.cmake  miniz.cmake  opensans.cmake  openusd.cmake  sdl2.cmake
include/simcore/: SIM_data.h  SIM_export.h  SIM_macro.h  SIM_model.h  SIM_thread.h  SIM_tnum.h  SIM_xmacro.h  base.h  collision.h  core_api.h  data.h  dynamics.h  foundation.h  math.h  model.h  plugin.h  resource.h  runtime.h  sim_plugin.h  sim_san.h  sim_spec.h  simcore.h  simexport.h  simmacro.h  simthread.h  simxmacro.h  solver.h  spec.h  xml.h
models/: double_pendulum.xml  fuzajiaolian.xml  fuzajiaolian_two_gear_baseline.xml  gear_scene.xml  gear_selfcontained.xml  slider_crank.xml
output/: Gear21_Vel_Rx.csv  Link_Gear_Vel_Rx.csv  Swing_Arm_Vel_Rx.csv  gear_example.csv  gear_example_cpp.csv
output/double_pendulum/: sim_Link1_Acc.csv  sim_Link1_Pos.csv  sim_Link1_Vel.csv  sim_Link2_Acc.csv  sim_Link2_Pos.csv  sim_Link2_Vel.csv
output/slider_crank/: comparison_metrics.csv  sim_Link_Body1_Pos.csv  sim_Link_Body2_Pos.csv  sim_Link_Body2_Vel_Rz.csv  sim_Link_Body3_Pos.csv  sim_Sphere_Body5_Pos.csv  sim_Sphere_Body5_Vel_Rz.csv
scripts/: check_two_gear_direction.py  extract_rmd.py
src/cc/: array_safety.h
src/engine/: CMakeLists.txt  engine_array_safety.h  engine_callback.c  engine_callback.h  engine_collision_box.c  engine_collision_convex.c  engine_collision_convex.h  engine_collision_driver.c  engine_collision_driver.h  engine_collision_gjk.c  engine_collision_gjk.h  engine_collision_primitive.c  engine_collision_primitive.h  engine_collision_sdf.c  engine_collision_sdf.h  engine_core_constraint.c  engine_core_constraint.h  engine_core_smooth.c  engine_core_smooth.h  engine_core_util.c  engine_core_util.h  engine_crossplatform.cc  engine_crossplatform.h  engine_derivative.c  engine_derivative.h  engine_derivative_fd.c  engine_derivative_fd.h  engine_forward.c  engine_forward.h  engine_global_table.h  engine_init.c  engine_init.h  engine_inline.h  engine_inverse.c  engine_inverse.h  engine_io.c  engine_io.h  engine_island.c  engine_island.h  engine_macro.h  (+38 more)
src/plugin/: CMakeLists.txt
src/plugin/sdf/: CMakeLists.txt  gear_plugin.cc
src/thread/: CMakeLists.txt  thread_pool.cc  thread_pool.h  thread_queue.h  thread_task.cc  thread_task.h
src/user/: CMakeLists.txt  user_api.cc  user_api.h  user_cache.cc  user_cache.h  user_composite.cc  user_composite.h  user_flexcomp.cc  user_flexcomp.h  user_init.c  user_mesh.cc  user_model.cc  user_model.h  user_objects.cc  user_objects.h  user_resource.cc  user_resource.h  user_threadpool.cc  user_threadpool.h  user_util.cc  user_util.h  user_vfs.cc  user_vfs.h
src/xml/: CMakeLists.txt  xml.cc  xml.h  xml_api.cc  xml_api.h  xml_base.cc  xml_base.h  xml_global.cc  xml_global.h  xml_native_reader.cc  xml_native_reader.h  xml_native_writer.cc  xml_native_writer.h  xml_numeric_format.cc  xml_numeric_format.h  xml_urdf.cc  xml_urdf.h  xml_util.cc  xml_util.h
tests/: p4_contact_smoke.c
tools/: compare_results.py  compare_slider_crank.py  complex_gear_sim.cc  double_pendulum_sim.cc  gear_contact_export.py  gear_contact_export_cpp.cc  plot_gear_cpp_csv.py  slider_crank_sim.cc
